--- a/project3/report/questions/q35.tex
+++ b/project3/report/questions/q35.tex
@@ -1,1 +1,16 @@
 \subsection*{Question 3.5}
+
+From figure \ref{fig:q35hc} 
+
+\begin{figure}[!htbp]
+  \centering \includegraphics[width=0.95\textwidth]{./images/q35hc}
+  \caption{Shows the hirarchical clustering}
+  \label{fig:q35hc}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+  \centering \includegraphics[width=0.95\textwidth]{./images/q35hm}
+  \caption{Shows the heat map of the reduced sample set}
+  \label{fig:q35hm}
+\end{figure}
