Added 3.2 and fixed 3.1

--- a/project3/report/questions/q31.tex
+++ b/project3/report/questions/q31.tex
@@ -1,20 +1,18 @@
 \subsection*{Question 3.1}
-In this eksesice we are working on data from 40 hans, representet be 56
-points on are 2D plain. One of the hans are shown in figur
-\ref{fig:q31hand}, and you can se that the figur loks lige are regular
-hand. 
+In this exercise we are working on data from 40 hands, represented by 56
+points on a 2D plane. One of the hands are shown in figure
+\ref{fig:q31hand}, and you can se that the figure looks like are regular
+hand.
 
-If we take alle the firste x and y, points of the 40 hans. The mean is
-calculatet to $[1.0725, 0.4434]$ and the coverianc to $[0.0039, -0.0011;
--0.0011, 0.0005]$, are visualisation of the mean and coveriance, can be
-seen in figur \ref{fig:q31onepoint}. wher it can be seen that the gauss
-is slitlige tiltet and streats.
+With the first 40 $x$'s and $y$'s, we calculate the mean to $[1.0725, 0.4434]$ and the covariance to $[0.0039, -0.0011;
+-0.0011, 0.0005]$. A visualization of the mean and covariance can be
+seen in figure \ref{fig:q31onepoint}, and it can be seen that the gauss
+is slightly tilted and stretched.
 
-If we calculate the mean and coverianc of all the poing in the hans and
-plots it. we gets are plot that representent the cance that are given
-point of are hand ligs in in the cirkuls in the plot, it can be seen in
-figur \ref{fig:q31allpoints}, rekenice that the plot it selv look lik
-are hand it self.
+If we calculate the mean and covariance of all the points in the hands and
+plot them together, we get a plot that represents the chance that a given
+point of a hand lies in in the given area in the plot. This can be seen in
+figure \ref{fig:q31allpoints}, where the plot looks like the hand itself.
 
 \begin{figure}[!htbp]
   \centering
