--- a/project3/report/questions/q36.tex
+++ b/project3/report/questions/q36.tex
@@ -10,7 +10,7 @@ and the \emph{REN} cluster. This is using $k = 9$
 
 \begin{figure}[!htbp]
   \centering \includegraphics[width=0.95\textwidth]{./images/q36pcs2}
-  \caption{2d plot according to pc$1$ and pc$2$ using k-means for
+  \caption{2D plot according to pc$1$ and pc$2$ using k-means for
     coloring.}
   \label{fig:q36pcs2}
 \end{figure}
@@ -25,7 +25,7 @@ figure \ref{fig:q36pcs2} again clusters nicely.
 
 \begin{figure}[!htbp]
   \centering \includegraphics[width=0.95\textwidth]{./images/q36pcs3}
-  \caption{2d plot according to pc$1$ and pc$2$ using k-means for
+  \caption{2D plot according to pc$1$ and pc$2$ using k-means for
     coloring.}
   \label{fig:q36pcs3}
 \end{figure}
@@ -33,7 +33,7 @@ figure \ref{fig:q36pcs2} again clusters nicely.
 \newpage
 
 Here we now try to use the first three principal components to plot
-the data in $3$d. To see if we can find out why some of the cancer
+the data in 3D. To see if we can find out why some of the cancer
 groups where so intermixed in the two previuos figures. As we can see
 the cancer groups are still intermixed. We had hoped that using the
 three first principal components we would have been able to make a
@@ -41,7 +41,7 @@ better seperation of the cancer groups.
 
 \begin{figure}[!htbp]
   \centering \includegraphics[width=0.95\textwidth]{./images/q36pcs4}
-  \caption{3d plot according to pc$1$, pc$2$ and pc$3$ using k-means
+  \caption{3D plot according to pc$1$, pc$2$ and pc$3$ using k-means
     for coloring.}
   \label{fig:q36pcs4}
 \end{figure}
@@ -55,4 +55,4 @@ We have tried varying the number of \emph{k} over the range $2$--$10$,
 but the most optimal choise of \emph{k} seems to be somewhere around
 $6$ or $7$. Too low and we do not get enough separation between the
 different cancer group. Using too high a \emph{k} and we start
-seperating similar cancer types
+seperating similar cancer types.
