Fixed two small figure captures and a figure

--- a/project3/report/questions/q31.tex
+++ b/project3/report/questions/q31.tex
@@ -24,14 +24,14 @@ figure \ref{fig:q31allpoints}, where the plot looks like the hand itself.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.85\textwidth]{./images/q31_2}
-  \caption{Shows the variation of the first poin af alle the hans.}
+  \caption{Shows the variation of the first point of all the hands.}
   \label{fig:q31onepoint}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{./images/q31_2}
-  \caption{Shows the variation of the first poin af alle the hans.}
+  \includegraphics[width=0.85\textwidth]{./images/q31_3}
+  \caption{Shows the variation of all the point of all the hands.}
   \label{fig:q31allpoints}
 \end{figure}
 
