--- a/project3/report/questions/q33.tex
+++ b/project3/report/questions/q33.tex
@@ -18,7 +18,7 @@ $k_1$ and $k_2$ are the eigenvectors for the two best eigenvalues. We make a sca
   \label{fig:q33scatter}
 \end{figure}
 
-Measuring the distance from the center, we see that the 5 largest distances are $d = [3.2194, 3.1527, 2.3197, 2.2101, 2.1770]$.
+Measuring the distance from the center, we see that the 5 largest distances are\\$d = [3.2194, 3.1527, 2.3197, 2.2101, 2.1770]$.
 Notice that two of these have significantly larger values than the following.
 Looking at the plot, we also notice that two points are significantly futher from the others.
 The hands corresponding to these points are seen in figure \ref{fig:q33}, where we can see that they are, indeed, differing from the mean hand.
