--- a/project3/report/questions/q34.tex
+++ b/project3/report/questions/q34.tex
@@ -1,9 +1,9 @@
 \subsection*{Question 3.4}
-The plot of the SVD.samples, can be seen in figure \ref{fig:q34}. It can be seen of the graf, that some of the gene group together, like the MEL gene type, at the top of the figure. The gene type BRE can be seen grouping together whit all of the otter gene type, and is not confined to are small group, like the other This indicate that this gene type can be are miss classification or that it just the way this gene type blend.
+The plot of the SVD samples, can be seen in figure \ref{fig:q34}. It can be seen that some of the genes group together, like the MEL gene type at the top of the figure. The gene type BRE can be seen grouping together with all of the other gene types, and is not confined to a small group like the other. This indicates that this gene type might be a misclassification, but it might just the way this gene type is distributed.
+
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.85\textwidth]{./images/q34cancer}
-  \caption{Shows are plot over the SVD sample of difference gene.}
+  \caption{Shows a plot over the SVD samples of different genes.}
   \label{fig:q34}
 \end{figure}
-
