added updated getGenderIndex and createTransitionMatrix

--- a/project4/report/report.tex
+++ b/project4/report/report.tex
@@ -32,9 +32,8 @@
 \lstset{language=Matlab, basicstyle=\scriptsize,
     showstringspaces=false, numbers=left, stepnumber=1, numberstyle=\tiny, frame=tb}
 
-
-\title{Statistical Methods for Machine Learning \\ Mandatory Project 3}
-\author{Kasper Steenstrup\\Michael Andersen\\Esben Skaarup}
+\title{Statistical Methods for Machine Learning \\ Exams Project 4}
+\author{Michael Andersen}
 \date{\today}
 
 \hypersetup{
@@ -44,36 +43,31 @@ filecolor=black,%
 linkcolor=black,%
 urlcolor=black,%
 bookmarksopen=false,
-pdftitle={Statistical Methods for Machine Learning - Mandatory Project 2},
-pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
+pdftitle={Statistical Methods for Machine Learning - Exams Project 4},
+pdfauthor={Michael Andersen}
 }
 
 \begin{document}
 \maketitle
-
-\input{./questions/q31.tex}
-
 \newpage
-\input{./questions/q32.tex}
+\input{./questions/q401.tex}
 \newpage
-
-\input{./questions/q33.tex}
+\input{./questions/q402.tex}
 \newpage
-\input{./questions/q34.tex}
+\input{./questions/q403.tex}
 \newpage
-\input{./questions/q35.tex}
+\input{./questions/q404.tex}
 \newpage
-\input{./questions/q36.tex}
+\input{./questions/q405.tex}
 \newpage
-\input{./questions/q37.tex}
+\input{./questions/q406.tex}
 \newpage
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Formal stuff
-
-%\bibliographystyle{abbrvnat}
-%\bibliography{bibliography}
-%\addcontentsline{toc}{chapter}{Litteratur
+\input{./questions/q407.tex}
+\newpage
+\input{./questions/q408.tex}
+\newpage
+\input{./questions/q409.tex}
+\newpage
+\input{./questions/q410.tex}
 
 \end{document}
